# SagSel

./: .bazelrc  .readthedocs.yaml  AUTHORS  MODULE.bazel  README.md  Rakefile  hello_world.py  pnpm-lock.yaml  renovate.json  test.py  uno.py
.github/workflows/: bazel.yml  ci-python.yml  main.yml
common/: repositories.bzl  selenium_manager.bzl
dotnet/: .editorconfig  CHANGELOG  selenium-dotnet-version.bzl
dotnet/src/webdriver/: Command.cs  CommandInfoRepository.cs  CookieJar.cs  DetachedShadowRootException.cs  DriverService.cs  DriverServiceNotFoundException.cs  ElementClickInterceptedException.cs  ElementNotInteractableException.cs  ElementNotSelectableException.cs  ElementNotVisibleException.cs  EncodedFile.cs  ErrorResponse.cs  HttpCommandInfo.cs  ICookieJar.cs  ICustomDriverCommandExecutor.cs  IJavaScriptEngine.cs  IJavascriptExecutor.cs  ISearchContext.cs  ISupportsPrint.cs  IWebElement.cs  InitializationScript.cs  InsecureCertificateException.cs  InvalidCookieDomainException.cs  InvalidElementStateException.cs  InvalidSelectorException.cs  JavaScriptEngine.cs  JavaScriptException.cs  MoveTargetOutOfBoundsException.cs  NetworkManager.cs  NoAlertPresentException.cs  NoSuchDriverException.cs  NoSuchElementException.cs  NoSuchFrameException.cs  NoSuchShadowRootException.cs  NoSuchWindowException.cs  NotFoundException.cs  PinnedScript.cs  PrintOptions.cs  RelativeBy.cs  Response.cs  (+13 more)
dotnet/src/webdriver/cdp/: BUILD.bazel
dotnet/test/common/: AlertsTest.cs  ChildrenFindingTest.cs  ClearTest.cs  CommandTests.cs  ContentEditableTest.cs  ElementAttributeTest.cs  ElementFindingTest.cs  ElementSelectingTest.cs  ExecutingJavascriptTest.cs  JavascriptEnabledBrowserTest.cs  PartialLinkTextMatchTest.cs  (+5 more)
java/: CHANGELOG  maven_install.json
java/src/org/openqa/selenium/auth/: BUILD.bazel  DefaultLoginHandler.java  LoginHandler.java
java/test/org/openqa/selenium/auth/: BUILD.bazel  LoginHandlerTest.java
javascript/grid-ui/: package.json
javascript/selenium-webdriver/: index.js
py/: BUILD.bazel  CHANGES  conftest.py  pyproject.toml  requirements.txt  requirements_lock.txt  tox.ini
py/docs/: README.rst  requirements.txt
rb/: .rubocop.yml  CHANGES  Gemfile
rb/spec/: BUILD.bazel  tests.bzl
rust/: Cargo.toml
rust/src/: edge.rs  ffmpeg.rs  files.rs  lib.rs  main.rs
rust/tests/: common.rs  record_tests.rs
scripts/: BUILD.bazel  hello_testing.py  pinned_browsers.py
(+254 files in other folders)
