load("//dotnet:defs.bzl", "generate_devtools")
load("//dotnet:selenium-dotnet-version.bzl", "SUPPORTED_DEVTOOLS_VERSIONS")

[
    generate_devtools(
        name = "generate-{}".format(devtools_version),
        out = "{}".format(devtools_version),
        browser_protocol = "//common/devtools/chromium/{}:browser_protocol".format(devtools_version),
        generator = "//third_party/dotnet/devtools/src/DevToolsGenerator",
        js_protocol = "//common/devtools/chromium/{}:js_protocol".format(devtools_version),
        protocol_version = "{}".format(devtools_version),
        templates = [
            "//third_party/dotnet/devtools/src/DevToolsGenerator/Templates:command.hbs",
            "//third_party/dotnet/devtools/src/DevToolsGenerator/Templates:DevToolsSessionDomains.hbs",
            "//third_party/dotnet/devtools/src/DevToolsGenerator/Templates:domain.hbs",
            "//third_party/dotnet/devtools/src/DevToolsGenerator/Templates:event.hbs",
            "//third_party/dotnet/devtools/src/DevToolsGenerator/Templates:project.hbs",
            "//third_party/dotnet/devtools/src/DevToolsGenerator/Templates:type-enum.hbs",
            "//third_party/dotnet/devtools/src/DevToolsGenerator/Templates:type-hash.hbs",
            "//third_party/dotnet/devtools/src/DevToolsGenerator/Templates:type-object.hbs",
        ],
        visibility = ["//dotnet:__subpackages__"],
    )
    for devtools_version in SUPPORTED_DEVTOOLS_VERSIONS
]
