load("//java:defs.bzl", "java_library")

java_library(
    name = "auth",
    srcs = glob(["*.java"]),
    visibility = [
        "//java/src/org/openqa/selenium:__pkg__",
        "//java/test/org/openqa/selenium/auth:__pkg__",
    ],
    deps = [
        "//java/src/org/openqa/selenium:core",
        "//java/src/org/openqa/selenium/support/ui:wait",
    ],
)